[package]
name = "draw-receipt"
version = "0.1.0"
authors = ["houseme <housemecn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
homepage = "https://github.com/houseme/draw-receipt"
repository = "https://github.com/houseme/draw-receipt"
readme = "README.md"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
